--- a/packages/site/static/global.css
+++ b/packages/site/static/global.css
@@ -108,3 +108,13 @@ input {
 input[aria-invalid="true"] {
   border: 2px solid var(--error-color);
 }
+
+.sr-only {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
