--- a/packages/site/src/pages/docs/index.astro
+++ b/packages/site/src/pages/docs/index.astro
@@ -82,7 +82,9 @@ import BaseLayout from 'layouts:BaseLayout.astro';
   }
 
   main {
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto;
+    margin-bottom: 6rem;
+    width: 95%;
   }
 </style>
