--- a/packages/site/src/styles/prism.css
+++ b/packages/site/src/styles/prism.css
@@ -28,7 +28,8 @@ pre[class*='language-'] {
 
 /* Code blocks */
 pre[class*='language-'] {
-  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
   margin: 0.5em 0;
   overflow: auto;
 }
