fix: self host fonts

--- a/packages/site/src/layouts/BaseLayout.astro
+++ b/packages/site/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import 'tippy.js/dist/tippy.css';
+import '../styles/fonts.css';
 import '../styles/reset.css';
 import '../styles/prism.css';
 import '../styles/global.css';
@@ -19,11 +20,6 @@ const altLink = import.meta.env.PUBLIC_FELTE_ALT_LINK;
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ff3e00" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Inconsolata&family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-      />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
