--- a/packages/site/src/styles/fonts.css
+++ b/packages/site/src/styles/fonts.css
@@ -3,6 +3,7 @@
   font-family: 'Cabin';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local(''), url('/fonts/cabin-v18-latin-regular.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('/fonts/cabin-v18-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -12,6 +13,7 @@
   font-family: 'Cabin';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local(''), url('/fonts/cabin-v18-latin-700.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('/fonts/cabin-v18-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -21,6 +23,7 @@
   font-family: 'Inconsolata';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
     url('/fonts/inconsolata-v21-latin-regular.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -31,6 +34,7 @@
   font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
     url('/fonts/nunito-sans-v11-latin-regular.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -41,6 +45,7 @@
   font-family: 'Nunito Sans';
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
     url('/fonts/nunito-sans-v11-latin-italic.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -51,6 +56,7 @@
   font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local(''), url('/fonts/nunito-sans-v11-latin-700.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('/fonts/nunito-sans-v11-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
