--- a/packages/site/src/layouts/DocsLayout.astro
+++ b/packages/site/src/layouts/DocsLayout.astro
@@ -48,6 +48,7 @@ const { section, all, framework } = Astro.props;
   <script type="module" hoist>
     import 'components:Search/search-bar.ts';
     import '@shoelace-style/shoelace/dist/components/drawer/drawer';
+    import '@shoelace-style/shoelace/dist/components/details/details';
 
     const menuButton = document.querySelector('#side-menu-button');
     const drawer = document.querySelector('#drawer-menu');
