--- a/packages/site/src/pages/docs/index.astro
+++ b/packages/site/src/pages/docs/index.astro
@@ -47,6 +47,7 @@ import BaseLayout from 'layouts:BaseLayout.astro';
 <style>
   h1 {
     font-size: 3rem;
+    margin-left: 2rem;
   }
 
   .framework-link {
