refactor(site): use custom element for search

--- a/packages/site/src/layouts/DocsLayout.astro
+++ b/packages/site/src/layouts/DocsLayout.astro
@@ -95,6 +95,7 @@ const { section, all, framework } = Astro.props;
   @media (min-width: 966px) {
     main {
       margin-left: 2rem;
+      margin-right: 2rem;
     }
 
     .desktop-menu {
