--- a/packages/site/src/pages/docs/index.astro
+++ b/packages/site/src/pages/docs/index.astro
@@ -4,7 +4,7 @@ import BaseLayout from 'layouts:BaseLayout.astro';
 ---
 <BaseLayout title="Felte | Documentation" section="docs">
   <main>
-    <h1>Felte</h1>
+    <h1>Documentation</h1>
 
     <Markdown>
       Felte is a simple and extensible form library for [Solid](https://solidjs.com), [Svelte](https://svelte.dev) and [React](https://reactjs.org)/[Preact](https://preactjs.com). Its purpose is to let you handle form reactivity as easily as possible without having to use any components such as `Form` or `Field` to let you style your fields easily. Its extensibility also allows to build solutions for common issues such as error reporting or validation.
@@ -87,5 +87,6 @@ import BaseLayout from 'layouts:BaseLayout.astro';
     margin: 0 auto;
     margin-bottom: 6rem;
     width: 95%;
+    margin-top: 2rem;
   }
 </style>
