style(site): remove focus ring on details

--- a/packages/site/src/components/Docs/DocsNav.astro
+++ b/packages/site/src/components/Docs/DocsNav.astro
@@ -119,6 +119,10 @@ switch (framework) {
     padding-left: 1.5rem;
   }
 
+  sl-details::part(header):focus {
+    box-shadow: none;
+  }
+
   sl-details::part(content) {
     padding: 0;
     padding-top: 0.5rem;
