--- a/packages/site/src/pages/index.astro
+++ b/packages/site/src/pages/index.astro
@@ -82,7 +82,7 @@ import articles from '../other/articles.json';
       </Example>
     </div>
     <div class="row">
-      <Example title="Using Preact">
+      <Example title="Using Preact" client:visible>
         <iframe
           src="https://codesandbox.io/embed/felte-preact-demo-svkbbe?fontsize=14&hidenavigation=1&module=%2Fsrc%2FApp.js&theme=dark"
           style="
