--- a/packages/site/src/pages/docs/index.astro
+++ b/packages/site/src/pages/docs/index.astro
@@ -3,7 +3,7 @@ import { Markdown } from 'astro/components';
 import BaseLayout from 'layouts:BaseLayout.astro';
 ---
 <BaseLayout title="Felte | Documentation" section="docs">
-  <main>
+  <main tabindex="-1" id="main-content">
     <h1>Documentation</h1>
 
     <Markdown>
