--- a/packages/site/src/pages/index.astro
+++ b/packages/site/src/pages/index.astro
@@ -8,7 +8,7 @@ import articles from '../other/articles.json';
 ---
 
 <BaseLayout title="Felte | Home" section="home">
-  <main>
+  <main tabindex="-1" id="main-content">
     <div class="row">
       <section class="title" aria-labelledby="felte-title">
         <h1 id="felte-title">FELTE</h1>
