style(site): adjust styles to prevent content jumps

--- a/packages/site/src/layouts/BaseLayout.astro
+++ b/packages/site/src/layouts/BaseLayout.astro
@@ -13,6 +13,7 @@ const altVersion = import.meta.env.PUBLIC_FELTE_ALT_VERSION;
 const altLink = import.meta.env.PUBLIC_FELTE_ALT_LINK;
 ---
 
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
