--- a/packages/site/src/layouts/DocsLayout.astro
+++ b/packages/site/src/layouts/DocsLayout.astro
@@ -171,5 +171,6 @@ const { section, all, framework } = Astro.props;
   search-bar {
     display: block;
     height: 4rem;
+    margin-top: 1rem;
   }
 </style>
