--- a/packages/site/src/pages/docs/[framework]/[section].astro
+++ b/packages/site/src/pages/docs/[framework]/[section].astro
@@ -78,6 +78,9 @@ switch (framework) {
   case 'react':
     frameworkTitle = 'React/Preact';
     break;
+  case 'element':
+    frameworkTitle = 'Vanilla JS (Custom element)';
+    break;
 }
 ---
 
