--- a/packages/site/src/pages/docs/index.astro
+++ b/packages/site/src/pages/docs/index.astro
@@ -40,6 +40,15 @@ import BaseLayout from 'layouts:BaseLayout.astro';
           <svg role="img" aria-hidden="true" height="25" width="25" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7"></path></svg>
         </a>
       </div>
+      <div class="framework-link">
+        <a
+          aria-label="Section: Getting started with Vanilla JS (Custom element)"
+          href="/docs/element/getting-started"
+          >
+          Get started with Vanilla JS (Custom element)
+          <svg role="img" aria-hidden="true" height="25" width="25" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7"></path></svg>
+        </a>
+      </div>
     </div>
   </main>
 </BaseLayout>
