style(site): improve layout on wide screens

--- a/packages/site/src/components/Nav.astro
+++ b/packages/site/src/components/Nav.astro
@@ -73,6 +73,7 @@ const { section } = Astro.props;
     justify-content: space-between;
     margin: 0 auto;
     width: 95%;
+    max-width: 128rem;
   }
 
   .nav-logo {
