--- a/packages/site/src/layouts/DocsLayout.astro
+++ b/packages/site/src/layouts/DocsLayout.astro
@@ -102,6 +102,8 @@ const { section, all, framework } = Astro.props;
 
   .container {
     display: flex;
+    margin: 0 auto;
+    max-width: 128rem;
   }
 
   .desktop-menu {
