--- a/packages/site/src/pages/index.astro
+++ b/packages/site/src/pages/index.astro
@@ -108,6 +108,8 @@ import articles from '../other/articles.json';
     justify-content: space-around;
     flex-wrap: wrap;
     min-height: calc(100vh - 6rem);
+    max-width: 128rem;
+    margin: 0 auto;
   }
 
   .row section {
