--- a/packages/site/src/components/Docs/DocsNav.astro
+++ b/packages/site/src/components/Docs/DocsNav.astro
@@ -162,4 +162,12 @@ switch (framework) {
   .framework-list li a {
     padding-left: 3rem;
   }
+
+  sl-details:not(:defined) [slot="summary"] {
+    padding: 1rem;
+    padding-left: 1.5rem;
+    font-size: 1.2rem;
+    display: block;
+  }
+
 </style>
